--- a/index.html
+++ b/index.html
@@ -5662,8 +5662,9 @@
                     Exclusive community for holders of 10,000,000+ CORE tokens
                 </p>
 
-                <div style="display:flex; justify-content:center; margin-top: 1rem;">
-                    <button class="generate-btn" disabled>COMING SOON</button>
+                <div id="whaleVerifyContainer" style="display:flex; flex-direction: column; align-items: center; margin-top: 1rem; gap: 0.75rem;">
+                    <button id="whaleVerifyBtn" class="generate-btn">VERIFY WALLET</button>
+                    <div id="whaleStatusMessage" style="font-size: 0.75rem; color: var(--core-text-blue); text-align: center; min-height: 1.5rem; max-width: 400px; line-height: 1.4;"></div>
                 </div>
             </div>
         </div>
@@ -8361,6 +8362,13 @@
             }
         });
     </script>
+
+    <!-- Solana Wallet Adapter -->
+    <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
+    <script src="https://unpkg.com/@solana/wallet-adapter-wallets@latest/lib/index.iife.js"></script>
+    
+    <!-- Whale Verification Script -->
+    <script src="/whale-verify-frontend.js?v=5"></script>
     
 </body>
 </html>
