"Disable whale verification button - coming soon"

--- a/index.html
+++ b/index.html
@@ -5663,8 +5663,8 @@
                 </p>
 
                 <div id="whaleVerifyContainer" style="display:flex; flex-direction: column; align-items: center; margin-top: 1rem; gap: 0.75rem;">
-                    <button id="whaleVerifyBtn" class="generate-btn">VERIFY WALLET</button>
-                    <div id="whaleStatusMessage" style="font-size: 0.75rem; color: var(--core-text-blue); text-align: center; min-height: 1.5rem; max-width: 400px; line-height: 1.4;"></div>
+                    <button id="whaleVerifyBtn" class="generate-btn" disabled style="opacity: 0.6; cursor: not-allowed;">COMING SOON</button>
+                    <div id="whaleStatusMessage" style="font-size: 0.75rem; color: var(--core-text-blue); text-align: center; min-height: 1.5rem; max-width: 400px; line-height: 1.4;">Whale verification will be available soon!</div>
                 </div>
             </div>
         </div>
